# This file is part of smuggler. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/raphaelcohn/smuggler/master/COPYRIGHT. No part of smuggler, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of smuggler. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/raphaelcohn/smuggler/master/COPYRIGHT.


[package]
name = "rtiff"
description = "A TIFF parser and writer"
keywords = ["tiff"]
categories = ["multimedia::images"]
license = "AGPL3"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/smuggler"
repository = "https://github.com/lemonrock/smuggler.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
edition = "2018"
publish = false
version = "0.0.0"


[dependencies]
likely = "^0.2.0"
memchr = "^2.4.1"
strum = { version = "^0.21.0", features = ["derive"] }
swiss-army-knife = "^0.0.28"
