# This file is part of smuggler. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/raphaelcohn/smuggler/master/COPYRIGHT. No part of smuggler, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of smuggler. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/raphaelcohn/smuggler/master/COPYRIGHT.


[package]
name = "smuggler"
description = "smuggler"
keywords = ["smuggler"]
categories = []
license = "AGPL3"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/smuggler"
repository = "https://github.com/lemonrock/smuggler.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
edition = "2018"
publish = false
version = "0.0.0"


[dependencies]
likely = "^0.2.0"
rtiff = { version = "^0.0.0", path = "../rtiff" }
crypto_box = { version = "^0.7.0", features = ["alloc", "std", "u64_backend"] }
